# arrows-svg

./: Cargo.toml  README.md  Taskfile.yml
examples/: README.md  e1.html
src/: main.rs  svg.rs  template.html
tests/examples/: e1.rs  e2.rs  mod.rs
